--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,5 +1,6 @@
 body {
   font: 100% Helvetica, sans-serrif;
-  color: #3c0b4f; }
+  color: #000000;
+  background-color: darkslategray; }
 
 /*# sourceMappingURL=index.css.map */
