--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,7 +1,7 @@
 $font-stack: Helvetica, sans-serrif;
-$main-font: #3c0b4f;
 
 body {
     font: 100% $font-stack;
-    color: $main-font;
+    color: #000000;
+    background-color: darkslategray;
 }
