--- a/src/styles/scss/appContainer.scss
+++ b/src/styles/scss/appContainer.scss
@@ -1,8 +1,13 @@
-$background: darkGrey;
 
 .main_container {
     text-align: center;
     padding: 10px;
+    margin: 5px auto;
     border-radius: 6px;
-    background-color: $background;
+    max-width: fit-content;
+    background-color: #DFDCE3;
+}
+
+.search_input {
+    margin: 8px auto;
 }
