--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,8 +1,12 @@
 $font-stack: Helvetica, sans-serrif;
 
+* {
+    margin:0;
+    padding: 0;
+}
 
 body {
     font: 100% $font-stack;
     color: #000000;
-    background-color: darkslategray;
+    background-color: #0375b4;
 }
