--- a/src/styles/scss/appContainer.scss
+++ b/src/styles/scss/appContainer.scss
@@ -9,5 +9,15 @@
 }
 
 .search_input {
-    margin: 8px auto;
+    margin: 20px auto;
+    padding: 15px;
+}
+
+.intro {
+    padding: 10px;
+    margin: 0 auto;
+    color: white;
+    background: #0375b4;
+    width: fit-content;
+    border-radius: 6px;
 }
