--- a/src/styles/css/appContainer.css
+++ b/src/styles/css/appContainer.css
@@ -7,6 +7,15 @@
   background-color: #DFDCE3; }
 
 .search_input {
-  margin: 8px auto; }
+  margin: 20px auto;
+  padding: 15px; }
+
+.intro {
+  padding: 10px;
+  margin: 0 auto;
+  color: white;
+  background: #0375b4;
+  width: fit-content;
+  border-radius: 6px; }
 
 /*# sourceMappingURL=appContainer.css.map */
