--- a/src/styles/css/appContainer.css
+++ b/src/styles/css/appContainer.css
@@ -18,4 +18,7 @@
   width: fit-content;
   border-radius: 6px; }
 
+.countries_container {
+  margin: 15px auto; }
+
 /*# sourceMappingURL=appContainer.css.map */
