--- a/src/styles/css/countrySingle.css
+++ b/src/styles/css/countrySingle.css
@@ -1,3 +1,12 @@
+.country_single {
+  padding: 20px;
+  margin: 15px;
+  border: 5px darkgrey solid;
+  border-radius: 7px;
+  background-color: darkgray; }
 
+.flaggins {
+  max-width: 50%;
+  max-height: 50%; }
 
 /*# sourceMappingURL=countrySingle.css.map */
