--- a/src/styles/css/countrySingle.css
+++ b/src/styles/css/countrySingle.css
@@ -5,8 +5,8 @@
   border-radius: 7px;
   background-color: darkgray; }
 
-.flaggins {
-  max-width: 50%;
-  max-height: 50%; }
+img {
+  width: 150px;
+  height: 100px; }
 
 /*# sourceMappingURL=countrySingle.css.map */
