--- a/src/styles/scss/countrySingle.scss
+++ b/src/styles/scss/countrySingle.scss
@@ -6,7 +6,10 @@
     background-color: darkgray;
 }
 
+img {
+    width: 150px;
+    height: 100px;
+}
+
 .flaggins {
-    max-width: 50%;
-    max-height: 50%;
 }
