--- a/src/styles/css/countrySingle.css
+++ b/src/styles/css/countrySingle.css
@@ -1,12 +1,16 @@
 .country_single {
-  padding: 20px;
+  padding: 10px;
   margin: 15px;
   border: 5px darkgrey solid;
   border-radius: 7px;
-  background-color: darkgray; }
+  background-color: darkgray;
+  display: inline-block; }
 
 img {
   width: 150px;
   height: 100px; }
+
+.flaggins {
+  padding-bottom: 10px; }
 
 /*# sourceMappingURL=countrySingle.css.map */
