--- a/src/styles/scss/countrySingle.scss
+++ b/src/styles/scss/countrySingle.scss
@@ -1,9 +1,10 @@
 .country_single {
-    padding: 20px;
+    padding: 10px;
     margin: 15px;
     border: 5px darkgrey solid;
     border-radius: 7px;
     background-color: darkgray;
+    display: inline-block;
 }
 
 img {
@@ -12,4 +13,5 @@ img {
 }
 
 .flaggins {
+    padding-bottom: 10px;
 }
