--- a/src/styles/scss/countrySingle.scss
+++ b/src/styles/scss/countrySingle.scss
@@ -1,10 +1,11 @@
 .country_single {
     padding: 10px;
     margin: 15px;
-    border: 5px darkgrey solid;
+    border: 2px #0375b4 solid;
     border-radius: 7px;
     background-color: darkgray;
     display: inline-block;
+    box-shadow: 3px 3px 3px 3px #ccc
 }
 
 img {
