--- a/src/styles/css/appContainer.css
+++ b/src/styles/css/appContainer.css
@@ -1,7 +1,8 @@
 .main_container {
   text-align: center;
-  padding: 10px;
-  margin: 20px auto;
+  padding: 25px;
+  margin: 50px auto;
+  width: 95%;
   border-radius: 6px;
   background-color: #DFDCE3; }
 
