--- a/src/styles/scss/appContainer.scss
+++ b/src/styles/scss/appContainer.scss
@@ -1,8 +1,9 @@
 
 .main_container {
     text-align: center;
-    padding: 10px;
-    margin: 20px auto;
+    padding: 25px;
+    margin: 50px auto;
+    width: 95%;
     border-radius: 6px;
     background-color: #DFDCE3;
 }
